[metadata]
name = bloc
version = 0.0.1
author = Isaac Clinton
description = Python bloc pattern framework that helps separation of business logic from presentation. Inspired by dart bloc library
long_description = file: README.md

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src